--- a/styles/db-theme/_page--explore-oc.scss
+++ b/styles/db-theme/_page--explore-oc.scss
@@ -3355,17 +3355,226 @@
     }
   }
 
+  .db-section--explore-oc-after-life-roadmap2 {
+    position: relative;
+    height: 2197px;
+    padding-left: unset;
+    padding-right: unset;
+    padding-top: unset;
+
+    @media only screen and (max-width: 480px) {
+      display: none;
+    }
+
+    .afterlife {
+      height: 1065px;
+      position: relative;
+      padding-top: 121px;
+
+      @media only screen and (max-width: 768px) {
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 70px;
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+        display: block;
+        top: 0;
+        right: 0;
+        left: 0;
+        height: 1065px;
+        background: url('Explore-OC__asset-v21-3800x2130.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        z-index: -1;
+
+        @media only screen and (max-width: 1440px) {
+          background-position: left;
+        }
+      }
+
+      .db-container {
+        .db-row {
+          &:nth-child(1) {
+            flex-direction: column;
+            row-gap: 40px;
+            align-items: center;
+            .db-col {
+
+              &:nth-child(1) {            
+                color: #FFF;
+                text-align: center;
+                font-family: $primaryFontFamily;
+                font-size: 80px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 100%;
+
+                @media only screen and (max-width: 768px) {
+                  font-size: 50px;
+                }
+              }
+
+              &:nth-child(2) {
+                color: #FFF;
+                text-align: center;
+                font-family: $primaryFontFamily;
+                font-size: 32px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 150%;
+                max-width: 773px;
+                width: 100%;
+                min-width: 773px;
+
+                @media only screen and (max-width: 768px) {
+                  font-size: 25px;
+                  max-width: 550px;
+                  min-width: unset;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .roadmap {
+      background-color: #0E0914;
+      height: 1132px;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      padding-left: 20px;
+      padding-right: 20px;
+      padding-bottom: 77px;
+
+      @media only screen and (max-width: 768px) {
+        justify-content: center;
+      }
+
+      .roadmap-bg-video-container {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+        display: block;
+        width: 100%;
+        height: 1070px;
+
+        .db-bg-video {
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          z-index: 1;
+          display: block;
+          object-position: center;
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+
+          &.--ds-view {
+            display: block;
+
+            @media only screen and (max-width: 768px) {
+              display: none;
+            }
+          }
+
+          &.--mb-view {
+            display: none;
+
+            @media only screen and (max-width: 768px) {
+              display: block;
+            }
+          }
+        }
+
+        &::before {
+          content: "";
+          position: absolute;
+          display: block;
+          top:0;
+          left:0;
+          right:0;
+          background: linear-gradient(180deg, #0F0918 0%, rgba(15, 9, 23, 0.00) 100%);
+          z-index: 2;
+          height: 287px;
+        }
+
+        &::after {
+          content: "";
+          position: absolute;
+          display: block;
+          bottom: 0;
+          left:0;
+          right:0;
+          height: 228px;
+          background: linear-gradient(0deg, #100A16 0%, rgba(16, 10, 22, 0.00) 100%);
+          z-index: 2;
+          
+        }
+      }
+
+      .db-container {
+        z-index: 3;
+        .db-row {
+          &:nth-child(1) {
+            flex-direction: column;
+            row-gap: 8px;
+
+            @media only screen and (max-width: 768px) {
+              max-width: 500px;
+              width: 100%;
+            }
+            
+            .db-col {
+              &:nth-child(1) {
+                color: #FFF;
+                text-shadow: 1.7687277793884277px 1.7687277793884277px 13.265459060668945px rgba(0, 0, 0, 0.15);
+                font-family: $primaryFontFamily;
+                font-size: 48px;
+                font-style: normal;
+                font-weight: 600;
+                line-height: 100%; /* 48px */
+                letter-spacing: -1.92px;
+              }
+
+              &:nth-child(2) {
+                color: #FFF;
+                text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+                font-family: $primaryFontFamily;
+                font-size: 24px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 150%;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
   .db-section--explore-oc-coming-soon-2 {
     position: relative;
     z-index: 2;
     background-color: transparent;
     height: 985px;
-    margin: -53px auto 0;
     padding: 50px 20px;
 
     @media only screen and (max-width: 768px) {
       z-index: 3;
       height: auto;
+      padding-top: unset;
+      background: #09050F;
     }
 
     &::before {
@@ -3391,7 +3600,7 @@
       
       @media only screen and (max-width: 768px) {
         position: relative;
-        // background-image: url('Explore-OC_ComingSoon_bg-v03-769x622.png');
+        background-image: url('Explore-OC__asset-v22-2044x1672.jpg');
         // background-position: center;
         // background-size: auto 100%;
         height: 620px;
@@ -3429,6 +3638,12 @@
             height: 100px;
           }
 
+          @media only screen and (max-width: 768px) {
+            align-self: center;
+            max-width: 100px;
+            height: 80px;
+          }
+
           @media only screen and (max-width: 480px) {
             align-self: center;
             max-width: 100px;
@@ -3461,6 +3676,7 @@
 
           @media only screen and (max-width: 768px) {
             font-size: 60px;
+            align-self: center;
           }
 
           @media only screen and (max-width: 480px) {
@@ -3483,6 +3699,8 @@
 
           @media only screen and (max-width: 768px) {
             font-size: 35px;
+            align-self: center;
+            margin: 0 0 35px;
           }
 
           @media only screen and (max-width: 480px) {
