--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -16,3 +16,5 @@
 @import './db-theme/page--about-us';
 @import './db-theme/page--roadmap';
 @import './db-theme/page--explore-oc';
+@import './db-theme/page-privacy-policy';
+@import './db-theme/page-terms-of-use';
