--- a/sections/page-explore-oc.liquid
+++ b/sections/page-explore-oc.liquid
@@ -416,11 +416,11 @@
   </section>
 
   <section class="db-section db-section--explore-oc-after-life-roadmap2">
-    <div class="afterlife">
+    <div class="afterlife" id="afterlife" ref="afterlife">
       <div class="db-container">
         <div class="db-row">
           <div class="db-col">
-            THE AFTER, AFTER LIFE
+            THE AFTER, <span>AFTER LIFE</span>
           </div>
           <div class="db-col">
             But wait, that’s not all! For a limited time only get a full story world and all the insanity that rolls with a bunch of hooligans in the undead world of 2069.
