--- a/styles/db-theme/_page--explore-oc.scss
+++ b/styles/db-theme/_page--explore-oc.scss
@@ -2508,6 +2508,7 @@
       padding-bottom: 213px;
       padding-right: 20px;
       padding-left: 20px;
+      background: #0E0914;
 
       @media only screen and (max-width: 480px) {
         padding-top: 20px;
@@ -2526,14 +2527,18 @@
         content: "";
         position: absolute;
         left: 0;
-        bottom: 0;
-        right: 0;
-        top:0;
+        // bottom: 0;
+        // right: 0;
+        // top:0;
+        top:100px;
         display: block;
         background: url('Explore-OC__asset-v15-6908x4060.png');
         background-repeat: no-repeat;
         background-position: left;
         background-size: cover;
+        max-width: 1727px;
+        width: 100%;
+        height: 1015px;
 
         @media only screen and (max-width: 480px) {
           background: url('Explore-OC__asset-v18-4600x4060.png');
@@ -3361,6 +3366,7 @@
     padding-left: unset;
     padding-right: unset;
     padding-top: unset;
+    
 
     @media only screen and (max-width: 480px) {
       display: none;
@@ -3370,6 +3376,16 @@
       height: 1065px;
       position: relative;
       padding-top: 121px;
+      padding-left: 20px;
+      background: url('Explore-OC__asset-v23-12000x3394.jpg');
+      background-repeat: no-repeat;
+      // background-position: bottom;
+      background-position: center;
+      background-size:cover;
+      // background-size: auto 100%;
+      background-attachment: fixed;
+      margin: -10px 0;
+      
 
       @media only screen and (max-width: 768px) {
         padding-left: 20px;
@@ -3381,54 +3397,109 @@
         content: "";
         position: absolute;
         display: block;
-        top: 0;
+        bottom: 0;
+        left:0;
         right: 0;
-        left: 0;
-        height: 1065px;
-        background: url('Explore-OC__asset-v21-3800x2130.png');
+        height: 1148px;
+        background: url('Explore-OC__asset-v24-12000x3446.png');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        z-index: -1;
-
-        @media only screen and (max-width: 1440px) {
-          background-position: left;
-        }
+        z-index: 2;
       }
 
+      // &::before {
+      //   content: "";
+      //   position: absolute;
+      //   display: block;
+      //   max-width: 691px;
+      //   width: 100%;
+      //   height: 1148px;
+      //   bottom:0;
+      //   background: url('sample3.png');
+      //   background-repeat: no-repeat;
+      //   background-position: center;
+      //   background-size: cover;
+      //   z-index: 2;
+      //   left: 50%;
+      //   transform: translateX(-20%);
+      // }
+
+      // &::before {
+      //   content: "";
+      //   position: absolute;
+      //   display: block;
+      //   top: 0;
+      //   right: 0;
+      //   left: 0;
+      //   height: 1065px;
+      //   // background: url('Explore-OC__asset-v21-3800x2130.png');
+      //   background: url('sample1.jpg');
+      //   background-repeat: no-repeat;
+      //   background-position: center;
+      //   background-size:cover;
+      //   background-attachment: fixed;
+      //   z-index: -1;
+
+      //   // @media only screen and (max-width: 1440px) {
+      //   //   background-position: left;
+      //   // }
+      // }
+
       .db-container {
+        position: relative;
+        z-index: 3;
         .db-row {
           &:nth-child(1) {
             flex-direction: column;
-            row-gap: 40px;
-            align-items: center;
+            row-gap: 475px;
+            align-items: flex-start;
             .db-col {
 
               &:nth-child(1) {            
                 color: #FFF;
-                text-align: center;
+                text-align: left;
                 font-family: $primaryFontFamily;
-                font-size: 80px;
+                font-size: 96px;
                 font-style: normal;
                 font-weight: 700;
                 line-height: 100%;
 
-                @media only screen and (max-width: 768px) {
-                  font-size: 50px;
+                span {
+                  color: #FFF;
+                  font-family: $primaryFontFamily;
+                  font-size: 48px;
+                  font-style: normal;
+                  font-weight: 700;
+                  line-height: 100%;
                 }
+                // @media only screen and (max-width: 768px) {
+                //   font-size: 50px;
+                // }
               }
 
               &:nth-child(2) {
+                // color: #FFF;
+                // text-align: center;
+                // font-family: $primaryFontFamily;
+                // font-size: 32px;
+                // font-style: normal;
+                // font-weight: 500;
+                // line-height: 150%;
+                // max-width: 773px;
+                // width: 100%;
+                // min-width: 773px;
+
                 color: #FFF;
-                text-align: center;
+                text-align: left;
                 font-family: $primaryFontFamily;
                 font-size: 32px;
                 font-style: normal;
                 font-weight: 500;
                 line-height: 150%;
-                max-width: 773px;
+                max-width: 578px;
                 width: 100%;
-                min-width: 773px;
+                min-width: 578px;
 
                 @media only screen and (max-width: 768px) {
                   font-size: 25px;
@@ -3569,6 +3640,7 @@
     background-color: transparent;
     height: 985px;
     padding: 50px 20px;
+    background:#0E0914;
 
     @media only screen and (max-width: 768px) {
       z-index: 3;
@@ -3589,6 +3661,7 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+      top:-11px;
 
       @media only screen and (min-width: 1920px) {
         background-size: auto 100%;
